# Aircraft

./: .gitignore  README.md  VERSION.md  app.py  construct.py  poetry.lock.off  pyproject.toml
_internal/: README.md  construct.py
_internal/clients/: game_client.py  language.py  menu_client.py  null.py
clients/: _lib_.py  game_client.py  menu_client.py
clients/Backend/: _lib_.py  event.py  language.py  logged.py  music.py
clients/Frontend/: Text.py  UI.py  animation.py  button.py  surface.py
clients/module/: FileWorker.py  Surface.py  Text.py  UI.py  __init__.py  _lib_.py  button.py  event.py  language.py  logged.py  music.py
clients/module/UI_module/: animation.py
clients/module/config/: config.py
src/: app.py  game.py  languageUI.py  level.py  options.py
src/module/: FileWorker.py  Surface.py  Text.py  UI.py  __init__.py  bootrap.py  bootstrap.py  correct_start.py  event.py  game_client.py  language.py  logged.py  menu_client.py  music.py
src/module/UI_module/: animation.py
