[project]
name = "Aircraft"
version = "0.2.7"
description = "game"
authors = [
    {name = "Chinho"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame-ce (>=2.5.7,<3.0.0)",
]

[tool.poetry.dependencies]
python = "^3.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
